# annotate

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  package.xml  plugin_description.xml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docker/: Dockerfile  docker-compose.yml  download.bash
docs/: labeling.md
icons/: README.md
icons/classes/: README.md
include/annotate/: annotate_display.h  annotate_node.h  annotate_tool.h  annotation_marker.h  file_dialog_property.h  shortcut_property.h
launch/: annotate.launch  demo.launch  demo.rviz
src/: annotate_display.cpp  annotate_node.cpp  annotate_tool.cpp  annotation_marker.cpp  file_dialog_property.cpp  shortcut_property.cpp
